fix: rating width & gap

--- a/src/components/ui/rating/rating.module.scss
+++ b/src/components/ui/rating/rating.module.scss
@@ -1,5 +1,6 @@
 .rating {
   display: flex;
+  gap: 10px;
 }
 
 .star {
