--- a/src/pages/deck/myDeckTable/myDeckTable.module.scss
+++ b/src/pages/deck/myDeckTable/myDeckTable.module.scss
@@ -18,3 +18,7 @@
   vertical-align: middle;
   object-fit: contain;
 }
+
+.gradeCell {
+  width: 200px;
+}
